# RPS

./: CMakeLists.txt  README.txt
Client/: CMakeLists.txt
Client/qml/: CreateRoomMenu.qml  Header.qml  Main.qml  Menu.qml  Room.qml  RoomsMenu.qml  SettingsMenu.qml
Client/src/: Client.cpp  Client.hpp  main.cpp
Common/: CMakeLists.txt
Common/include/RPS/: common.hpp
Server/: CMakeLists.txt
Server/src/: Player.cpp  Player.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp  main.cpp
